k3s/batch/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jpetstore-backend-deployment
  namespace: jpetstore
spec:
  selector:
    matchLabels:
      app: jpetstore
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: jpetstore
        tier: backend
    spec:
      containers:
        - name: jpetstore-backend
          image: lanznx/batch-worker:5.0
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          ports:
            - containerPort: 8080
