k3s/batch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jpetstore-ingress
  namespace: jpetstore
spec:
  ingressClassName: traefik
  rules:
  - host: jpetstore.cerana.tech
    http:  
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jpetstore-backend-service
            port:
              number: 7050
